--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,11 +1,7 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>tests.PostTest.get_allPosts_Negative</td></tr>
-<tr><td>tests.PostTest.update_post</td></tr>
-<tr><td>tests.PostTest.get_post</td></tr>
-<tr><td>tests.PostTest.update_post_invalidId</td></tr>
-<tr><td>tests.PostTest.create_post</td></tr>
-<tr><td>tests.PostTest.get_allPosts</td></tr>
-<tr><td>tests.PostTest.create_post_with_fake_token</td></tr>
-<tr><td>tests.PostTest.delete_post</td></tr>
-<tr><td>tests.PostTest.get_post_negative</td></tr>
+<tr><td>tests.CommentTest.create_comment</td></tr>
+<tr><td>tests.CommentTest.get_allComments</td></tr>
+<tr><td>tests.CommentTest.get_Comment</td></tr>
+<tr><td>tests.CommentTest.get_allComments_Negative</td></tr>
+<tr><td>tests.CommentTest.create_comment_negative</td></tr>
 </table>
