--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9a285">  <td>21/02/20 13:35:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:tests.PostTest@1c3a4799]">&gt;&gt;Setup</td> 
+<tr bgcolor="b9f472">  <td>21/02/20 14:42:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:tests.CommentTest@1c3a4799]">&gt;&gt;Setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121453612</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>21/02/20 13:35:59</td>   <td>579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.delete_post_negative()[pri:0, instance:tests.PostTest@1c3a4799]">delete_post_negative</td> 
+<tr bgcolor="7567f1">  <td>21/02/20 14:42:29</td>   <td>570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.get_Comment_Negative()[pri:0, instance:tests.CommentTest@1c3a4799]">get_Comment_Negative</td> 
   <td>main@1121453612</td>   <td></td> </tr>
 </table>
