comment tests completed

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>update_comment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>update_comment_negativet</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>create_comment</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -23,7 +31,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>delete_comment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>get_Comment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>delete_comment_negative</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
