--- a/test-output/old/Prod Execution/methods-alphabetical.html
+++ b/test-output/old/Prod Execution/methods-alphabetical.html
@@ -1,24 +1,62 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Prod Execution</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="958a8d">  <td>21/02/06 15:36:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:UserTest@1e6d1014]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2018111884</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>21/02/06 15:36:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:MiscTest@2833cc44]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@762118302</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>21/02/06 15:36:32</td>   <td>3342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:MiscTest@2833cc44]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@762118302</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>21/02/06 15:36:33</td>   <td>4449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:UserTest@1e6d1014]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2018111884</td>   <td></td> </tr>
-<tr bgcolor="958a8d">  <td>21/02/06 15:36:34</td>   <td>5118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:UserTest@1e6d1014]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2018111884</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>21/02/06 15:36:30</td>   <td>1138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest.Test_CreateUser_AlreadyExist()[pri:0, instance:UserTest@1e6d1014]">Test_CreateUser_AlreadyExist</td> 
-  <td>TestNG-tests-1@2018111884</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>21/02/06 15:36:33</td>   <td>4451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest.Test_Create_User_Successful()[pri:1, instance:UserTest@1e6d1014]">Test_Create_User_Successful</td> 
-  <td>TestNG-tests-1@2018111884</td>   <td></td> </tr>
-<tr bgcolor="718b94">  <td>21/02/06 15:36:30</td>   <td>1138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiscTest.Test_HomePage()[pri:0, instance:MiscTest@2833cc44]">Test_HomePage</td> 
-  <td>TestNG-tests-2@762118302</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>21/02/06 15:36:34</td>   <td>5119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest.Test_Login_Successful()[pri:2, instance:UserTest@1e6d1014]">Test_Login_Successful</td> 
-  <td>TestNG-tests-1@2018111884</td>   <td></td> </tr>
-<tr bgcolor="718b94">  <td>21/02/06 15:36:32</td>   <td>3344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiscTest.Test_Ping()[pri:0, instance:MiscTest@2833cc44]">Test_Ping</td> 
-  <td>TestNG-tests-2@762118302</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>21/02/20 15:51:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:tests.UserTest@3fd7a715]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>21/02/20 15:51:48</td>   <td>4608</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:tests.MiscTest@711f39f9]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>21/02/20 15:51:50</td>   <td>5860</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:tests.CommentTest@7f13d6e]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>21/02/20 15:51:51</td>   <td>7324</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Setup()[pri:0, instance:tests.PostTest@71bbf57e]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>21/02/20 15:51:44</td>   <td>568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest.Test_CreateUser_AlreadyExist()[pri:0, instance:tests.UserTest@3fd7a715]">Test_CreateUser_AlreadyExist</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>21/02/20 15:52:10</td>   <td>26104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest.Test_Create_User_Successful()[pri:1, instance:tests.UserTest@3fd7a715]">Test_Create_User_Successful</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="cb64ae">  <td>21/02/20 15:51:48</td>   <td>4609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiscTest.Test_HomePage()[pri:0, instance:tests.MiscTest@711f39f9]">Test_HomePage</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="b9f472">  <td>21/02/20 15:52:13</td>   <td>29068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest.Test_Login_Successful()[pri:2, instance:tests.UserTest@3fd7a715]">Test_Login_Successful</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="cb64ae">  <td>21/02/20 15:51:49</td>   <td>5171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MiscTest.Test_Ping()[pri:0, instance:tests.MiscTest@711f39f9]">Test_Ping</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:50</td>   <td>5860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.create_comment()[pri:0, instance:tests.CommentTest@7f13d6e]">create_comment</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:50</td>   <td>6555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.create_comment_negative()[pri:0, instance:tests.CommentTest@7f13d6e]">create_comment_negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:51:51</td>   <td>7325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.create_post()[pri:0, instance:tests.PostTest@71bbf57e]">create_post</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:51:52</td>   <td>8707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.create_post_with_fake_token()[pri:0, instance:tests.PostTest@71bbf57e]">create_post_with_fake_token</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:52:14</td>   <td>29735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.delete_comment()[pri:2, instance:tests.CommentTest@7f13d6e]">delete_comment</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:53</td>   <td>9314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.delete_comment_negative()[pri:0, instance:tests.CommentTest@7f13d6e]">delete_comment_negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:52:11</td>   <td>27015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.delete_post()[pri:1, instance:tests.PostTest@71bbf57e]">delete_post</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:51:54</td>   <td>9933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.delete_post_negative()[pri:0, instance:tests.PostTest@71bbf57e]">delete_post_negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:55</td>   <td>11472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.get_Comment()[pri:0, instance:tests.CommentTest@7f13d6e]">get_Comment</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:56</td>   <td>12102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.get_Comment_Negative()[pri:0, instance:tests.CommentTest@7f13d6e]">get_Comment_Negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:57</td>   <td>12759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.get_allComments()[pri:0, instance:tests.CommentTest@7f13d6e]">get_allComments</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:51:57</td>   <td>13498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.get_allComments_Negative()[pri:0, instance:tests.CommentTest@7f13d6e]">get_allComments_Negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:51:58</td>   <td>14157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.get_allPosts()[pri:0, instance:tests.PostTest@71bbf57e]">get_allPosts</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:52:00</td>   <td>15974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.get_allPosts_Negative()[pri:0, instance:tests.PostTest@71bbf57e]">get_allPosts_Negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:52:00</td>   <td>16491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.get_post()[pri:0, instance:tests.PostTest@71bbf57e]">get_post</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:52:03</td>   <td>18996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.get_post_negative()[pri:0, instance:tests.PostTest@71bbf57e]">get_post_negative</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:52:12</td>   <td>28503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.update_comment()[pri:1, instance:tests.CommentTest@7f13d6e]">update_comment</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>21/02/20 15:52:04</td>   <td>20350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CommentTest.update_comment_negativet()[pri:0, instance:tests.CommentTest@7f13d6e]">update_comment_negativet</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:52:05</td>   <td>20952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.update_post()[pri:0, instance:tests.PostTest@71bbf57e]">update_post</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>21/02/20 15:52:09</td>   <td>24976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.update_post_invalidId()[pri:0, instance:tests.PostTest@71bbf57e]">update_post_invalidId</td> 
+  <td>TestNG-tests-1@768967576</td>   <td></td> </tr>
 </table>
